<resources>
    <string name="app_name">SkillCinema</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Пропустить</string>
    <string name="text_first_onboarding">Узнавай \nо премьерах</string>
    <string name="text_second_onboarding">Создавай \nколлекции</string>
    <string name="text_third_onboarding">Делись \nс друзьями</string>
    <string name="all">Все</string>
    <string name="premieres"><b>Популярные сериалы</b></string>
    <string name="top_250"><b>Топ - 250</b></string>
    <string name="popular"><b>Популярное</b></string>
    <string name="vampire"><b>Вампиры</b></string>
    <string name="family"><b>Семья</b></string>
    <string name="example_title_movie">6.4 Китобой\n2020 драма, приключения\nРоссия, 1 ч 33 мин, 16+</string>
    <string name="short_description_movie_example"><b>Чукотский парень влюбляется\nв американскую вебкам-модель.\nПриз Венеции, Кристина Асмус\nв роли девушки мечты</b></string>
    <string name="description_movie_example">Все меняется в жизни юного\nчукотского охотника Лёшки\nс появлением в поселке интернета.\nОн влюбляется - впервые и сильно -\nв молчаливую девушку из видеочата.\nУзнав, что она живет в Детройте,\nЛешка решается на самый отчаянный\nпоступок в своей жизни.</string>
    <string name="the_film_was_shot"><b>В фильме снимались</b></string>
    <string name="quantity">27</string>
    <string name="example_actor">Владимир Онохов</string>
    <string name="example_movie_role">Лешка</string>
    <string name="we_were_working_on_the_film"><b>Над фильмом работали</b></string>
    <string name="gallery"><b>Галерея</b></string>
    <string name="similar_films"><b>Похожие фильмы</b></string>
    <string name="screenshot_button">Кадры</string>
    <string name="from_filming_button">Сo съемок</string>
    <string name="posters_button">Постеры</string>
    <string name="the_best"><b>Лучшее</b></string>
    <string name="example_actor_title"><b>Кристина Асмус</b></string>
    <string name="filmography"><b>Фильмография</b></string>
    <string name="example_title_sum_movie">44 фильма</string>
    <string name="title_page_male">Страница актера</string>
    <string name="title_page_fimale">Страница актрисы</string>
    <string name="actress">Актриса</string>
    <string name="dubbing_actress">Актриса дубляжа</string>
    <string name="actress_plays_herself">Актриса: играет саму себя</string>
    <string name="example_film_name">Близкие</string>
    <string name="producer">Продюссер</string>
    <string name="hint_in_search">Фильмы, актеры, режиссёры</string>
    <string name="text_error_in_search">К сожалению, по вашему запросу \nничего не найдено</string>
    <string name="definition_settings"><b>Настройки поиска</b></string>
    <string name="show">Показывать</string>
    <string name="films">Фильмы</string>
    <string name="serials">Сериалы</string>
    <string name="country">Страна</string>
    <string name="example_country">Россия</string>
    <string name="genre">Жанр</string>
    <string name="example_genre">Комедия</string>
    <string name="year">Год</string>
    <string name="example_year">с 1998 до 2017</string>
    <string name="rating">Рейтинг</string>
    <string name="example_rating">любой</string>
    <string name="sort">Сортировать</string>
    <string name="show_button">Показать</string>
    <string name="popularity">Популярность</string>
    <string name="data">Дата</string>
    <string name="not_viewed">Не просмотрен</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="user">User</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>