<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.tabBar.search.searchFilterPage.SearchFilterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/definition_settings" />

        <View
            android:id="@+id/buttonBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/margin_left_right"
            android:layout_marginTop="16dp"
            android:background="@drawable/ripple_effect_for_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/img_button_back"
            app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
            app:layout_constraintEnd_toEndOf="@+id/buttonBack"
            app:layout_constraintStart_toStartOf="@+id/buttonBack"
            app:layout_constraintTop_toTopOf="@+id/buttonBack" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/component_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/textViewShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_right"
            android:text="@string/show"
            android:textColor="#838390"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView11" />

        <RadioGroup
            android:id="@+id/radioGroup_fims_serials"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:animateLayoutChanges="true"
            android:baselineAligned="true"
            android:clickable="true"
            android:checkedButton="@id/radio_all"
            android:orientation="horizontal"
            android:layout_margin="@dimen/margin_left_right"
            app:barrierMargin="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewShow">

            <RadioButton
                android:id="@+id/radio_all"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_button_selector"
                android:button="@android:color/transparent"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/all"
                android:textColor="@color/radio_button_text_selector"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_movies"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-1dp"
                android:layout_marginRight="-1dp"
                android:layout_weight="1"
                android:background="@drawable/bg_radio_button_center_selector"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/films"
                android:textColor="@color/radio_button_text_selector"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButtonShowTVSeries"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_radio_button_right_selector"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/serials"
                android:textColor="@color/radio_button_text_selector"
                android:textSize="16sp" />
        </RadioGroup>

        <ImageView
            android:id="@+id/button_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/component_2"
            android:background="@drawable/ripple_effect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup_fims_serials" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_right"
            android:text="@string/country"
            android:textColor="#272727"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/button_country"
            app:layout_constraintStart_toStartOf="@+id/button_country"
            app:layout_constraintTop_toTopOf="@+id/button_country" />

        <TextView
            android:id="@+id/textView_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_left_right"
            android:textColor="#838390"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/button_country"
            app:layout_constraintEnd_toEndOf="@+id/button_country"
            app:layout_constraintTop_toTopOf="@+id/button_country"
            tools:text="@string/example_country" />

        <ImageView
            android:id="@+id/button_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/component_2"
            android:background="@drawable/ripple_effect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_country" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_right"
            android:text="@string/genre"
            android:textColor="#272727"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/button_genre"
            app:layout_constraintStart_toStartOf="@+id/button_genre"
            app:layout_constraintTop_toTopOf="@+id/button_genre" />

        <TextView
            android:id="@+id/textView_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_left_right"
            android:textColor="#838390"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/button_genre"
            app:layout_constraintEnd_toEndOf="@+id/button_genre"
            app:layout_constraintTop_toTopOf="@+id/button_genre"
            tools:text="@string/example_genre" />

        <ImageView
            android:id="@+id/button_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/component_2"
            android:background="@drawable/ripple_effect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_genre"
            app:rippleColor="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_right"
            android:text="@string/year"
            android:textColor="#272727"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/button_year"
            app:layout_constraintStart_toStartOf="@+id/button_year"
            app:layout_constraintTop_toTopOf="@+id/button_year" />

        <TextView
            android:id="@+id/textView_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_left_right"
            android:textColor="#838390"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/button_year"
            app:layout_constraintEnd_toEndOf="@+id/button_year"
            app:layout_constraintTop_toTopOf="@+id/button_year"
            tools:text="@string/example_year" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/component_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_year" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_right"
            android:layout_marginTop="15dp"
            android:text="@string/rating"
            android:textColor="#272727"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textViewRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="@dimen/margin_left_right"
            android:text="@string/example_rating"
            android:textColor="#838390"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_right"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/margin_left_right"
            android:orientation="horizontal"
            android:scrollIndicators="start|end"
            android:stepSize="1"
            android:theme="@style/RangeSliderStyle"
            android:valueFrom="1"
            android:valueTo="10"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:values="@array/initial_rating_slider_values" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/component_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:layout_marginTop="16dp"
            android:id="@+id/textViewSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_right"
            android:text="@string/sort"
            android:textColor="#838390"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <RadioGroup
            android:id="@+id/radioGroup_films_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_left_right"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:animateLayoutChanges="true"
            android:baselineAligned="true"
            android:checkedButton="@id/radio_data"
            android:clickable="true"
            android:orientation="horizontal"
            app:barrierMargin="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSort">

            <RadioButton
                android:id="@+id/radio_data"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_selector"
                android:button="@android:color/transparent"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/data"
                android:textColor="@color/radio_button_text_selector"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_popular"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-1dp"
                android:layout_marginRight="-1dp"
                android:layout_weight="1"
                android:background="@drawable/bg_radio_button_center_selector"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/popularity"
                android:textColor="@color/radio_button_text_selector"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_radio_button_right_selector"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/rating"
                android:textColor="@color/radio_button_text_selector"
                android:textSize="16sp" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonNotSee"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@drawable/ripple_effect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/margin_left_right"
            android:background="@drawable/button_not_see"
            android:backgroundTint="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/buttonNotSee"
            app:layout_constraintStart_toStartOf="@+id/buttonNotSee"
            app:layout_constraintTop_toTopOf="@+id/buttonNotSee" />

        <TextView
            android:id="@+id/textView_not_see"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_right"
            android:text="@string/not_viewed"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonNotSee"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/buttonNotSee" />

        <Button
            android:id="@+id/button_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_right"
            android:layout_marginEnd="@dimen/margin_left_right"
            android:backgroundTint="@color/blue"
            android:text="@string/show_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonNotSee" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>